HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
(INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.


#########################################################################

Aug 28, 2014: Various bug fixes.  This includes corner cases in FT_CAS,
              the instrumentor, and the shadow state representation of 
              arrays (most notably large, long-running programs.)
              
              Performance: RoadRunner's shadow state could pin 
              down objects that otherwise could be collected.  All Shadow
		      State objects (ShadowVolatile, ShadowLock, ArrayState, ...)
		      now refer back to real state via WeakReferences to avoid
		      such issues.
		      
  	          Tools can now have more specialized fast path methods for
	          array and field accesses.  See Tool.java

July 8, 2014: Various small changes and bug fixes in instrumentation.
              New CAS-based updaters.
              Updated to ASM version 5.
              
Jan 9, 2012:  Fixed typo in message reporting code for HB tool.

Jan 6, 2012:  Committed change for -lines option.  It now applies to
              array ops, field ops, but not lock ops.  It seems more
              useful this way.

Jan 5, 2012:  Committed change for -lines option.  It now applies to
              array ops, field ops, and lock acquire/release.
  

Oct 3, 2011:  Committed and pushed small code edits from various places.
              There were some conflicts that should have been resolved 
              correctly.  If problems exist, please use the version from
              June 20.